<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="app_name">Aarogya Setu</string>
    <string name="app_permissions">App Permissions</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auth_error_invalid_otp">The OTP you have entered is incorrect</string>
    <string name="auth_error_unknown">There is some error logging you in</string>
    <string name="auth_error_user_disabled">You are not allowed to sign in</string>
    <string name="bluetooth">&lt;b&gt;Bluetooth&lt;/b&gt;</string>
    <string name="bluetooth_and_gps">Bluetooth &amp; Location</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="cancel">Cancel</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">Close</string>
    <string name="com.crashlytics.android.build_id">0ffff3d7-f78f-4e12-9967-e87f58e23695</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="confirm_and_proceed">Confirm &amp; Proceed</string>
    <string name="contribute_to_a_safer_india">I Agree</string>
    <string name="country_code">+91</string>
    <string name="cowin_20_tracks_through">&lt;b&gt;Aarogya Setu&lt;/b&gt; tracks through a Bluetooth &amp;amp; Location \10generated social graph, your interaction \10with someone who could have tested \10COVID-19 positive.</string>
    <string name="data_sharing_with_the_ministry">&lt;b&gt;Data Sharing&lt;/b&gt;</string>
    <string name="default_web_client_id">645345756042-uh49l2v1sj4lj97cl07l08ard3oad27d.apps.googleusercontent.com</string>
    <string name="device_location">&lt;b&gt;Device Location&lt;/b&gt;</string>
    <string name="each_one_of_us">Each one of us has the power to help \10prevent the spread of the Coronavirus \10pandemic in India.</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="error_icon_content_description">Error</string>
    <string name="error_location">Location settings are inadequate, and cannot be fixed here. Fix in Settings.</string>
    <string name="error_network_error">Please check internet connection</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://covid19-6c396.firebaseio.com</string>
    <string name="gcm_defaultSenderId">645345756042</string>
    <string name="google_api_key">AIzaSyCgqPpLQ5fRS9imi6g3CmFYbluHxqp9HkE</string>
    <string name="google_app_id">1:645345756042:android:e31a41939c9918889cfe73</string>
    <string name="google_crash_reporting_api_key">AIzaSyCgqPpLQ5fRS9imi6g3CmFYbluHxqp9HkE</string>
    <string name="google_storage_bucket">covid19-6c396.appspot.com</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="i_understand">I Understand</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="image_back_content_description">Back</string>
    <string name="image_close_content_description">@string/close</string>
    <string name="image_language_change_content_description">Change Language</string>
    <string name="image_on_board_content_description">Show on-boarding</string>
    <string name="image_share_content_description">Share Application</string>
    <string name="image_sync_data_content_description">Sync Data</string>
    <string name="install">Install</string>
    <string name="internet_connection_lost">Internet Connection Lost</string>
    <string name="later">Later</string>
    <string name="location_sharing">location sharing</string>
    <string name="location_text">It is recommended that you set your location sharing to ‘Always’. You can change this anytime later.</string>
    <string name="login_failed">Login Failed. Please try again</string>
    <string name="make_sure_your_phone_is_connected_to_the_wifi_or_switch_to_mobile_data">Make sure your phone is connected to the WiFi or switch to mobile data.</string>
    <string name="message_failed_tap_to_retry">Failed to update. Tap to retry.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="monitors_your_device_s_proximity_within_6_feet_range">Monitors your device’s proximity to another mobile device.\10It is recommended that you keep it on at all times.</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="permission_info_tnc_text">&lt;p&gt;If you would like to contribute to a safer India please indicate your acceptance of the &lt;a href=https://static.swaraksha.gov.in/tnc/&gt;Terms of Service&lt;/a&gt; and the &lt;a href=https://web.swaraksha.gov.in/ncv19/privacy/&gt;Privacy Policy&lt;/a&gt; by clicking on the button below:&lt;/p&gt;</string>
    <string name="permissions_detail">We understand the nature and sensitivity of this topic and have taken strong measures to ensure that your data is not compromised.</string>
    <string name="permissions_title">Terms of Service &amp; Privacy</string>
    <string name="sample_collected_for_testing">Sample Collected for Testing</string>
    <string name="settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="sync_data_detail">Your data is always saved on your phone. Share it on secure Government Servers if…</string>
    <string name="sync_data_user_consent">To help contact tracing, your interaction data captured with Bluetooth and Location services will be shared with Government of India.</string>
    <string name="syncing_data">Syncing Data</string>
    <string name="syncing_data_detail">Sending interaction data captured with Bluetooth &amp; Location services to Government of India.</string>
    <string name="tested_positive">Tested Positive for Covid19</string>
    <string name="text_value">Say, you met someone a week back at a gathering or were in close proximity of someone unknown at a public place, and in a few days, they test positive for COVID-19.\10\10The Government of India will trace back all touch points of that person, through the active devices with the app installed that were in close radius of that person, in the past 14 days. \10\10A notification will then be sent to all such contacts with an advisory on further course of action, to self-isolate or to get the test done at a nearest testing centre, as needed. \10\10By participating in active contact tracing, you will help us minimise the spread of COVID-19 and enable Government of India to implement proactive measures for your health and well-being. \10\10</string>
    <string name="tracks_an_individual_s_touch_points_so_can_easily_find_others_who_came_in_close_contact">Your Data will be shared only with the Government of India.\10The App does not allow your name and number to be disclosed to the public at large at any time.</string>
    <string name="try_again">Try Again</string>
    <string name="turn_on">Turn On</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="turn_on_bluetooth_all_times">Bluetooth must be on at all times to track your proximity to other devices and give you accurate safety updates.</string>
    <string name="why_is_it_needed">Why is it needed?</string>
    <string name="your_mobile_number_is_required_to_know_your_identity">Your mobile number is required for contact tracing.</string>
</resources>