<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="24dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:textSize="16sp" android:textColor="@color/black" android:gravity="center" android:id="@+id/title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/enter_mobile_number" android:layout_toEndOf="@+id/close" style="@style/TextStyleFontSemiBold"/>
    <ImageView android:id="@+id/close" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_close_24px" android:contentDescription="@string/image_close_content_description"/>
    <com.google.android.material.textfield.TextInputLayout android:id="@+id/phone_number_layout" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:hint="@string/mobile_number" android:layout_below="@+id/close" app:boxBackgroundMode="2" app:helperTextTextColor="@color/black" app:hintAnimationEnabled="true" app:hintEnabled="true" app:hintTextColor="@color/blue" app:prefixText="@string/country_code" app:prefixTextColor="@color/black">
        <com.google.android.material.textfield.TextInputEditText android:id="@+id/phone_num" android:focusable="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:maxLength="10" android:inputType="phone" android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>
    <TextView android:textSize="14sp" android:textColor="@color/blue" android:id="@+id/why_needed" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/why_is_it_needed" android:layout_below="@+id/phone_number_layout" style="@style/TextStyleFontSemiBold"/>
    <ProgressBar android:id="@+id/progress_bar" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:indeterminate="true" android:indeterminateOnly="true" android:layout_below="@+id/why_needed" android:indeterminateTint="@color/blue" style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
    <Button android:id="@+id/validate_phone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:layout_marginBottom="10dp" android:text="@string/submit" android:layout_below="@+id/why_needed" android:layout_centerHorizontal="true"/>
</RelativeLayout>
