<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="end" android:id="@+id/close" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close"/>
    <ImageView android:layout_gravity="center" android:id="@+id/ic_state" android:layout_width="36dp" android:layout_height="36dp" android:src="@drawable/ic_syncing" android:contentDescription="@null"/>
    <TextView android:id="@+id/tv_sync_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/syncing_data" android:textAlignment="center" style="@style/TextStyleFontSemiBold"/>
    <TextView android:textColor="@color/black" android:id="@+id/tv_sync_detail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/syncing_data_detail" android:textAlignment="center" android:layout_marginStart="28dp" android:layout_marginEnd="28dp"/>
    <Button android:textSize="14sp" android:layout_gravity="center" android:id="@+id/btn_sync" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/cancel"/>
</LinearLayout>
