<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="end" android:id="@+id/close" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close"/>
    <TextView android:id="@+id/tv_sync_consent_detail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="28dp" android:text="@string/sync_data_user_consent" android:textAlignment="center" style="@style/TextStyleFontSemiBold"/>
    <Button android:textSize="14sp" android:layout_gravity="center" android:id="@+id/btn_confirm_and_proceed" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/confirm_and_proceed" android:backgroundTint="@color/sync_warning"/>
</LinearLayout>
