<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="8dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:layout_gravity="end" android:id="@+id/close" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_close_24px" android:contentDescription="@string/close"/>
    <ImageView android:layout_gravity="center" android:id="@+id/iv_sync_data" android:layout_width="64dp" android:layout_height="64dp" android:src="@drawable/ic_sync_data" android:contentDescription="@null"/>
    <TextView android:id="@+id/tv_sync_data_detail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:layout_marginBottom="8dp" android:text="@string/sync_data_detail" android:textAlignment="center" android:layout_marginStart="28dp" android:layout_marginEnd="28dp" style="@style/TextStyleFontSemiBold"/>
    <TextView android:textColor="@color/sync_warning" android:layout_gravity="center" android:id="@+id/btn_being_tested" android:background="@drawable/button_border_red" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/sample_collected_for_testing" android:paddingStart="16dp" android:paddingEnd="16dp" style="@style/TextStyleFontSemiBold"/>
    <Button android:layout_gravity="center" android:id="@+id/btn_tested_positive" android:paddingTop="12dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/tested_positive" android:backgroundTint="@color/sync_warning"/>
</LinearLayout>
