<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <RelativeLayout android:background="@color/white" android:paddingTop="10dp" android:paddingBottom="10dp" android:layout_width="match_parent" android:layout_height="wrap_content">
            <TextView android:textSize="18sp" android:textColor="@color/black" android:layout_gravity="center" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/app_permissions" android:layout_centerVertical="true" android:layout_marginStart="16dp" android:layout_marginEnd="8dp" android:layout_toStartOf="@+id/share" android:layout_alignParentStart="true" style="@style/TextStyleFontSemiBold"/>
            <ImageView android:layout_gravity="right|center_vertical|center_horizontal|center|end" android:id="@+id/language_change" android:background="?attr/selectableItemBackgroundBorderless" android:padding="8dp" android:focusable="true" android:clickable="true" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/ic_language_change" android:contentDescription="@string/image_language_change_content_description" android:layout_marginEnd="8dp" android:layout_alignParentEnd="true"/>
            <ImageView android:id="@+id/share" android:background="?attr/selectableItemBackgroundBorderless" android:padding="8dp" android:focusable="true" android:clickable="true" android:layout_width="40dp" android:layout_height="40dp" android:src="@drawable/ic_share" android:contentDescription="@string/image_share_content_description" android:layout_toStartOf="@+id/language_change"/>
        </RelativeLayout>
        <ScrollView android:layout_width="match_parent" android:layout_height="0dp" android:layout_weight="1">
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guidelineBeginPermissions" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_begin="16dp"/>
                <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@+id/guidelineEndPermissions" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_end="16dp"/>
                <LinearLayout android:orientation="vertical" android:id="@+id/header" android:background="@drawable/bg_blue_round_6dp" android:padding="8dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toTopOf="0">
                    <ImageView android:layout_gravity="center_horizontal" android:layout_width="64dp" android:layout_height="76dp" android:src="@drawable/lock_embelem" android:contentDescription="@null"/>
                    <TextView android:textSize="18sp" android:textColor="@color/white" android:gravity="center" android:id="@+id/tv_permissions_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/permissions_title" style="@style/TextStyleFontSemiBold"/>
                    <TextView android:textSize="14sp" android:textColor="@color/white" android:id="@+id/tv_permissions_detail" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="10dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp" android:text="@string/permissions_detail"/>
                </LinearLayout>
                <TextView android:textSize="14sp" android:id="@+id/tv_device_location" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/device_location" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/header" style="@style/PermissionScreenTitleTextStyle"/>
                <TextView android:textSize="12sp" android:id="@+id/tv_location_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/location_text" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/tv_device_location" style="@style/PermissionScreenDetailTextStyle"/>
                <TextView android:textSize="14sp" android:id="@+id/tv_bluetooth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/bluetooth" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/tv_location_text" style="@style/PermissionScreenTitleTextStyle"/>
                <TextView android:textSize="12sp" android:id="@+id/tv_bluetooth_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/monitors_your_device_s_proximity_within_6_feet_range" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/tv_bluetooth" style="@style/PermissionScreenDetailTextStyle"/>
                <TextView android:textSize="14sp" android:id="@+id/tv_data_sharing" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/data_sharing_with_the_ministry" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/tv_bluetooth_text" style="@style/PermissionScreenTitleTextStyle"/>
                <TextView android:textSize="12sp" android:id="@+id/tv_data_sharing_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="4dp" android:text="@string/tracks_an_individual_s_touch_points_so_can_easily_find_others_who_came_in_close_contact" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/tv_data_sharing" style="@style/PermissionScreenDetailTextStyle"/>
                <TextView android:textSize="12sp" android:id="@+id/tv_tnc_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="30dp" android:text="@string/permission_info_tnc_text" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="@+id/guidelineEndPermissions" app:layout_constraintHorizontal_bias="0" app:layout_constraintStart_toStartOf="@+id/guidelineBeginPermissions" app:layout_constraintTop_toBottomOf="@+id/tv_data_sharing_text" style="@style/PermissionScreenDetailTextStyle"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
        <View android:background="@color/divider" android:layout_width="match_parent" android:layout_height="1dp"/>
        <Button android:textSize="14sp" android:textColor="@color/white" android:layout_gravity="center_horizontal" android:id="@+id/btn_start" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/contribute_to_a_safer_india" android:paddingStart="32dp" android:paddingEnd="32dp"/>
    </LinearLayout>
    <ProgressBar android:layout_gravity="center" android:id="@+id/progress_bar" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:indeterminateTint="@color/blue"/>
</FrameLayout>
