<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:background="@drawable/rounded_background" android:padding="24dp" android:layout_width="match_parent" android:layout_height="match_parent" android:layout_marginBottom="100dp">
    <ImageView android:id="@+id/close" android:layout_width="30dp" android:layout_height="30dp" android:src="@drawable/ic_close_24px" android:contentDescription="@string/image_close_content_description" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="20sp" android:textColor="@color/black" android:id="@+id/tv_mobile_no_required" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/your_mobile_number_is_required_to_know_your_identity" android:layout_marginEnd="10dp" app:layout_constraintTop_toBottomOf="@+id/close" style="@style/TextStyleFontSemiBold"/>
    <TextView android:textSize="14sp" android:id="@+id/tv_say_you_met_someone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/text_value" app:layout_constraintStart_toStartOf="@+id/tv_mobile_no_required" app:layout_constraintTop_toBottomOf="@+id/tv_mobile_no_required"/>
    <Button android:textColor="@color/white" android:id="@+id/i_understand" android:background="@drawable/button" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="40dp" android:text="@string/i_understand" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/tv_say_you_met_someone"/>
    <View android:layout_width="match_parent" android:layout_height="2dp" android:layout_marginTop="50dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/i_understand"/>
</androidx.constraintlayout.widget.ConstraintLayout>
