<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:layout_gravity="center" android:id="@+id/no_internet_img" android:layout_width="46dp" android:layout_height="34dp" android:layout_marginTop="50dp" android:src="@drawable/no_network" android:contentDescription="@null" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:textSize="16sp" android:textStyle="bold" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/internet_connection_lost" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/no_internet_img"/>
    <TextView android:textSize="12sp" android:id="@+id/textView2" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/make_sure_your_phone_is_connected_to_the_wifi_or_switch_to_mobile_data" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingBottom="20dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="35dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/textView2">
        <Button android:textSize="14sp" android:layout_gravity="center" android:id="@+id/try_again" android:background="@drawable/button_try_again" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/try_again" style="?android:attr/buttonBarButtonStyle"/>
        <Button android:textSize="14sp" android:layout_gravity="center" android:id="@+id/settings" android:background="@drawable/button_settings_open" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/settings" android:layout_marginStart="20dp" style="?android:attr/buttonBarButtonStyle"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
