<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:id="@+id/linearLayout2" android:background="@color/no_network_back" android:layout_width="0dp" android:layout_height="100dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toTopOf="0">
        <ImageView android:layout_gravity="center" android:layout_width="46dp" android:layout_height="34dp" android:src="@drawable/bluetooth" android:contentDescription="@null"/>
    </LinearLayout>
    <TextView android:textSize="16sp" android:textStyle="bold" android:textColor="@color/black" android:id="@+id/textView" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20dp" android:text="@string/turn_on_bluetooth" android:layout_marginStart="30dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/linearLayout2"/>
    <TextView android:textSize="12sp" android:id="@+id/textView2" android:paddingLeft="30dp" android:paddingRight="30dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/turn_on_bluetooth_all_times" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/textView"/>
    <LinearLayout android:gravity="center" android:orientation="horizontal" android:paddingBottom="20dp" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="35dp" app:layout_constraintLeft_toLeftOf="0" app:layout_constraintRight_toRightOf="0" app:layout_constraintTop_toBottomOf="@+id/textView2">
        <TextView android:textSize="14sp" android:textColor="@color/white" android:layout_gravity="center" android:id="@+id/turn_on" android:background="@drawable/button_try_again" android:paddingLeft="24dp" android:paddingTop="12dp" android:paddingRight="24dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/turn_on"/>
        <TextView android:textSize="14sp" android:layout_gravity="center" android:id="@+id/later" android:background="@drawable/button_settings_open" android:paddingLeft="24dp" android:paddingTop="12dp" android:paddingRight="24dp" android:paddingBottom="12dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/later" android:layout_marginStart="20dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
